--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             <h2 class="section-title">Nuestros Servicios</h2>
             <div class="services-grid">
                 <div class="service-card fade-in-up">
-                    <div class="service-icon">✨</div>
+                    <div class="service-icon">⋄</div>
                     <h3>Alisados</h3>
                     <p>Tratamientos de alisado profesional para un cabello suave, manejable y sin frizz. Resultados duraderos con productos de alta calidad.</p>
                 </div>
