--- a/index.html
+++ b/index.html
@@ -452,12 +452,12 @@
         <div class="container">
             <h2 class="section-title">Síguenos</h2>
             <div class="social-links">
-                <a href="https://instagram.com/capilare" class="social-card" target="_blank">
+                <a href="https://www.instagram.com/capilareco/" class="social-card" target="_blank">
                     <i class="fab fa-instagram"></i>
                     <h4>Instagram</h4>
                     <p>@capilare</p>
                 </a>
-                <a href="https://tiktok.com/@capilare" class="social-card" target="_blank">
+                <a href="https://www.tiktok.com/@capilareco" class="social-card" target="_blank">
                     <i class="fab fa-tiktok"></i>
                     <h4>TikTok</h4>
                     <p>@capilare</p>
@@ -486,7 +486,7 @@
     </footer>
 
     <!-- WhatsApp Float Button -->
-    <a href="https://wa.me/573001234567?text=Hola%20Capilare,%20me%20gustaría%20agendar%20una%20cita" class="whatsapp-float" target="_blank">
+    <a href="https://api.whatsapp.com/message/H6LQKZYYN6O2K1?autoload=1&app_absent=0" class="whatsapp-float" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
