--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capilare - Alisados & Terapias</title>
+    <title>Capilare - Alisados & Terapias Capilares</title>
     <style>
         * {
             margin: 0;
@@ -365,7 +365,7 @@
     <!-- Header -->
     <header>
         <nav class="container">
-            <div class="logo">✨ CAPILARE</div>
+            <div class="logo">CAPILARE</div>
             <ul class="nav-links">
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#servicios">Servicios</a></li>
