--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                     ✨ Síguenos en redes sociales</p>
                 </div>
             </div>
-            <p>&copy; 2025 Capilare - Alisados & Terapias. Todos los derechos reservados.</p>
+            <p>&copy; 2025 Capilare - Alisados & Terapias Capilares. Todos los derechos reservados.</p>
         </div>
     </footer>
 
